# kg-read

./: .env.yaml  pyproject.toml  spanner_setup.py
app/: .get_relevant_neighborhood.py.swp  get_random_neighborhood.py  get_relevant_neighborhood.py  kg_service.py  main.py  utils.py
app/knowledge_curation_agent/: __init__.py  agent.py  main.py
app/knowledge_curation_agent/subagents/fetch_knowledge_agent/: agent.py
app/knowledge_curation_agent/subagents/update_knowledge_agent/: agent.py  kg_service.py  schemas.py  update_graph.py  utils.py
